Página produto css

--- a/produto.html
+++ b/produto.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produto</title>
+    <link rel="stylesheet" href="produto.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <img class="logo" src="assets/craftland logo.png" alt="">
+            <ul>
+                <li><a href="home.html">Inicio</a></li>
+                <li><a href="produto.html">Produtos</a></li>
+                <li><a href="vendas.html">Vendas</a></li>
+                <li><a href="clientes.html">Clientes</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <div class="novoProduto">
             <h2>Cadastrar novo produto</h2>
