--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
                 <label for="Senha">Senha</label>
                 <input class="input" type="password" id="password" placeholder="Digite sua senha" autofocus="true"
                     required>
-                <button class="btn" type="submit">Entrar</button>
+                <button class="btn" type="submit"><a href="home3.html">Entrar</a></button>
                 <p>Não tem uma conta? <a href="cadastro.html">Cadastre-se</a></p>
                 <br>
                 <div id="message" class="error"></div>
