--- a/produto.html
+++ b/produto.html
@@ -40,7 +40,15 @@
                 <input type="text" id="categoria" required>
     
                 <label for="tamanho">Tamanho:</label>
-                <input type="text" id="tamanho" required>
+                <select id="tamanho" required>
+                    <option ></option>
+                    <option > PP </option>
+                    <option > P </option>
+                    <option > M </option>
+                    <option > G </option>
+                    <option > GG </option>
+                </select>
+<!--                 <input type="text" id="tamanho" required> -->
     
                 <label for="valor">Valor:</label>
                 <input type="number" id="valor" required>
