--- a/produto.html
+++ b/produto.html
@@ -37,7 +37,15 @@
                 <input type="text" id="nome" required>
     
                 <label for="categoria">Categoria:</label>
-                <input type="text" id="categoria" required>
+                <select id="categoria" required>
+                    <option ></option>
+                    <option > Personagens animados </option>
+                    <option > Animais </option>
+                    <option > Objetos </option>
+                    <option > Super-Heróis </option>
+                    <option > ... </option>
+                </select>
+<!--                 <input type="text" id="categoria" required> -->
     
                 <label for="tamanho">Tamanho:</label>
                 <select id="tamanho" required>
