--- a/produto.html
+++ b/produto.html
@@ -16,17 +16,15 @@
 <body>
     <header>
         <nav>
-            <img class="logo" src="assets/craftland logo.png" alt="logo marca">
-            <div class="menuPrincipal">
-                <button class="cBotao" onclick="teste(event, 'inicio')" class="tablinks">Inicio</button>
-                <button class="cBotao" onclick="teste(event, 'produtos')" class="tablinks">Produtos</button>
-                <button class="cBotao" onclick="teste(event, 'vendas')" class="tablinks">Vendas</button>
-                <button class="cBotao" onclick="teste(event, 'clientes')" class="tablinks">Clientes</button>
-
-            </div>
-
+            <img class="logo" src="assets/craftland logo.png" alt="">
+            <ul>
+                <li><a href="home.html">Inicio</a></li>
+                <li><a href="produto.html">Produtos</a></li>
+                <li><a href="vendas.html">Vendas</a></li>
+                <li><a href="clientes.html">Clientes</a></li>
+            </ul>
         </nav>
-
+            
     </header>
 
     <main>
