--- a/produto.html
+++ b/produto.html
@@ -30,7 +30,7 @@
     <main>
         <div class="container">
             <h1>Cadastro de Produto</h1>
-            <form id="produtoForm">
+            <form id="produtoForm" action="produto.php" method="post">
                 <label for="nome">Nome do Produto:</label>
                 <input type="text" id="nome" required>
     
