--- a/vendas.html
+++ b/vendas.html
@@ -33,8 +33,8 @@
                 <label for="nomeCliente">Nome do Cliente:</label>
                 <input type="text" id="nomeCliente" required>
 
-                <label for="idProduto">ID do Produto:</label>
-                <input type="number" id="idProduto" required>
+                <label for="valorProduto">Valor do Produto:</label>
+                <input type="number" id="valorProduto" required min="0" step="0.01">
 
                 <label for="quantidade">Quantidade:</label>
                 <input type="number" id="quantidade" required min="1">
@@ -58,7 +58,7 @@
                     <tr>
                         <th>ID</th>
                         <th>Cliente</th>
-                        <th>ID Produto</th>
+                        <th>Valor Produto</th>
                         <th>Quantidade</th>
                         <th>Valor Total</th>
                         <th>Forma de Pagamento</th>
