--- a/produto.html
+++ b/produto.html
@@ -58,6 +58,9 @@
     
                 <label for="valor">Valor:</label>
                 <input type="number" id="valor" required>
+
+                label for="quantidade">Valor:</label>
+                <input type="number" id="quantidade" required>
     
                 <button type="submit">Adicionar Produto</button>
             </form>
@@ -71,6 +74,7 @@
                         <th>Categoria</th>
                         <th>Tamanho</th>
                         <th>Valor</th>
+                        <th>Quantidade</th>
                         <th>Ações</th>
                     </tr>
                 </thead>
