--- a/home.html
+++ b/home.html
@@ -39,8 +39,8 @@
         </div>
 
         <div class="chart-container">
-            <h2>Aniversário dos Clientes</h2>
-            <canvas id="aniversariosChart"></canvas>
+            <h2> Novos clientes</h2>
+            <canvas id="clientesChart"></canvas>
         </div>
     </section>
 
