--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
             
     <section class="charts">
         <div class="chart-container">
-            <h2>Últimos Produtos Vendidos</h2>
+            <h2>Produtos Mais Vendidos</h2>
             <canvas id="produtosVendidosChart"></canvas>
         </div>
 
@@ -39,7 +39,7 @@
         </div>
 
         <div class="chart-container">
-            <h2> Novos clientes</h2>
+            <h2> Novos Clientes</h2>
             <canvas id="clientesChart"></canvas>
         </div>
     </section>
